force-app/main/default/objects/Audience__c/Audience__c.object-meta.xml
<CustomObject>
    <description>User records who received the notifications and accepted it</description>
    <label>Audience</label>
    <nameField>
        <displayFormat>Audience-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>