force-app/main/default/objects/Audience__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>Contains selected public group ids</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Id</label>
    <type>TextArea</type>
</CustomField>