force-app/main/default/objects/Audience__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>