force-app/main/default/objects/Audience__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipName>Notification_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>