force-app/main/default/objects/Audience__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>